--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -6,22 +6,17 @@ Prerequisites
 
  * Python 2.6 or later (http://www.python.org/)
  * trytond (http://www.tryton.org/)
- * trytond_account (http://www.tryton.org/)
+ * proteus (http://www.tryton.org/)
+ * behave (http://pythonhosted.org/behave)
 
 Installation
 ------------
 
-Once you've downloaded and unpacked the tryton_behave source release, enter the
-directory where the archive was unpacked, and run:
+Once you have behave and proteus installed, there is no
+installation required for trytond_scenari: simply change
+to this directory and run behave. So far, it has only
+been tested on postgres backends using proteus. The
+most trivial test, which does not even use trytond is:
 
-    python setup.py install
+  behave --stop features/behave_test.feature
 
-Note that you may need administrator/root privileges for this step, as
-this command will by default attempt to install module to the Python
-site-packages directory on your system.
-
-For advanced options, please refer to the easy_install and/or the distutils
-documentation:
-
-  http://peak.telecommunity.com/DevCenter/EasyInstall
-  http://docs.python.org/inst/inst.html
