Finished parameterizing features/steps/scenario_account_stock_anglo_saxon.py     You should be able to use this feature to build productions systems.
    Made a first attempt at porting DSL from OpenERPScenario.
    Not documenented or tested yet.

    Now switching to Tryton 3.0 for development from now on.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,14 @@
+commit 50092ef7445e7e612efd7a1c35c045cad8b2073b
+Date:   Mon Oct 28 09:45:55 2013 +0200
+
+    Added support for Tryton 3.0
+    
+    Added the first version of OpenERPScenario's DSL.
+    
+    Added labels to steps.
+    
+    Refactored some steps to make them more parameterized.
+
 commit 5133559de602c26b6b313a7e1d73fa94804a484e
 Date:   Thu Oct 24 16:16:21 2013 +0300
 
