--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,15 @@
+commit 26344f02e177873532b0041394afca1df078eb26
+Date:   Tue Jan 13 03:53:25 2015 +0200
+
+    Added features/steps/trytond_calendar.py
+    Unfinished and no scenari yet.
+    
+    Added features/steps/scenario_bank.py
+    Unfinished and no scenari yet.
+    
+    Split up features/steps/scenario_doctests.py
+    to match the module name in the Tryton tree.
+
 commit e267921a4ec6f97e4b8d96391c9f63b5c0e0d2cf
 Date:   Fri Jan 9 03:20:48 2015 +0200
 
