Minor bugfixes and refactorings.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+commit fedc5977e8916ca149cb36dc67a446a2723b677e
+Date:   Sat Feb 28 21:54:09 2015 +0200
+
+    Many small improvements for the real world.
+
 commit f48056e2c474cc720fdf275e5eef993b63a6f12b
 Date:   Tue Feb 24 16:04:24 2015 +0200
 
