--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,13 @@
+commit 8cd2fa8697a2c7933e118ae35aae4a1d2d92396b
+Date:   Thu Mar 3 20:06:22 2016 +0200
+
+    mv README.md README.creole
+
+commit 02faac946a4cd231ab9cf3c569159a424f8f7e39
+Date:   Wed Mar 2 00:21:36 2016 +0200
+
+    Updated for Tyrton 3.4
+
 commit 5654bc9ce5fbdec3a0d5007a942e02dd014232c1
 Date:   Tue Mar 10 18:40:18 2015 +0200
 
