Improved to doc formatting

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,13 @@
+commit d3e3d33f6fb55ca2338708160fd9b73f565ef0a7
+Date:   Sun Apr 3 06:36:40 2016 +0300
+
+    Renamed wiki/Features- to wiki/Features_
+
+commit 515937fdb6a99c75a4d7802481adce537c9ef093
+Date:   Thu Mar 24 21:03:41 2016 +0200
+
+    Fixing account_asset - wip
+
 commit 58271f76fe982085df93d8d6f047d7d65439cda8
 Date:   Wed Mar 23 19:37:42 2016 +0200
 
