--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+commit 022cde4372c4517ccef56cac9a3b7562364faf1a
+Date:   Tue Apr 12 23:50:04 2016 +0300
+
+    Added wiki/BehaviorDrivenDevelopment.creole
+
 commit 14700aa9a8880d18a9ae6a2677fa8c160f5e2f96
 Date:   Mon Apr 11 23:48:39 2016 +0300
 
